frontend: Fix output height
Fix the output height. Previously it was about 3 lines high which made
it near unusable. Adding the height 100% made the drawing area
(arguably) too smaller, so with some trial and error we've fixed that
to 40vh (40% of the viewport height). Again this is messy and needs a
proper rework in the hopefully no too far future.

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -145,7 +145,8 @@ textarea, textarea[disabled] {
 }
 
 .output {
-  padding: 12px 16px;;
+  padding: 12px 16px;
+  height: 100%;
 }
 .canvas {
   flex:  0 1 50%;
